# quicLAN

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: CNAME  index.md
scripts/: build
src/: quicLAN.sln
src/UWP/quicLAN/: MainPage.cpp  MainPage.idl  quicLAN.vcxproj  quicLAN.vcxproj.filters
src/UWP/quicLANBG/: VpnBackgroundTask.cpp  VpnBackgroundTask.h  VpnBackgroundTask.idl  VpnPlugin.cpp  VpnPlugin.h  pch.h  quicLANBG.vcxproj  quicLANBG.vcxproj.filters  readme.md
src/core/: CMakeLists.txt  api.cpp  auth.cpp  auth.h  engine.cpp  engine.h  messages.cpp  messages.h  precomp.h  quiclan.cpp  quiclan.h  timer.h  workitem.h
src/inc/: CMakeLists.txt  quiclan.h
src/linux/: CMakeLists.txt  main.cpp
src/quicLAN/: App.cpp  App.h  App.idl  App.xaml  MainPage.h  MainPage.xaml  Package.appxmanifest  quicLAN.vcxproj  readme.md
src/quicLANBG/: VpnPlugin.cpp  pch.h  quicLANBG.vcxproj  quicLANBG.vcxproj.filters
src/test/: CMakeLists.txt  endtoendtest.cpp  main.cpp  tests.h  unittest.cpp
